# trader-learn

./: README.md  pyproject.toml
config/: sample_config.json
data/: sample_market_data.csv  sample_market_data.json
outputs/backtest/: backtest_report.md  backtest_summary.json  failure_report.json  trade_log.csv  trade_log.json
outputs/failures/: failure_report.md
outputs/interactive/: backtest_report.md  backtest_summary.json  failure_report.json  failure_report.md  trade_log.csv  trade_log.json
outputs/load-data/: data_summary.json  normalized_market_data.json
outputs/ml/: ml_model.json  ml_report.json  ml_report.md
scripts/: generate_sample_data.py
src/trader_backtesting/: __init__.py  cli.py  config.py  data_loading.py  features.py  interactive.py  metrics.py  ml_analysis.py  models.py  pattern_analysis.py  reporting.py  scoring.py  simulator.py  strategies.py  utils.py
tests/: test_backtesting.py
